...
    tf.placeholder = "https://exemplo.com"
    tf.font = Theme.Typography.body
    tf.clearButtonMode = .whileEditing
    tf.autocapitalizationType = .none
    tf.keyboardType = .URL
    tf.textColor = Theme.Color.dark
    tf.accessibilityIdentifier = "urlTextField"
    tf.translatesAutoresizingMaskIntoConstraints = false
    return tf
  }()
  
  let shortenButton: PrimaryButton = {
    let b = PrimaryButton(type: .system)
...
